# flask-web-calendar-api

./: app.example.ini  app.ini  pyproject.toml  wsgi.py
flask_web_calendar/: app.py
flask_web_calendar/api/: README.md
flask_web_calendar/api/common/models/: event.py
flask_web_calendar/api/common/schemas/: event.py
flask_web_calendar/api/v1/: api.py  event.py
flask_web_calendar/api/v2/: api.py  event.py
tests/: test_flask_web_calendar.py
